fixes breadcrumb text color in dark mode

--- a/src/assets/scss/common/_general.scss
+++ b/src/assets/scss/common/_general.scss
@@ -10,18 +10,11 @@
     font-weight: 400;
     src: url('../fonts/poppins/poppins-v5-latin-regular.eot'); /* IE9 Compat Modes */
     src: local('Poppins Regular'), local('Poppins-Regular'),
-        url('../fonts/poppins/poppins-v5-latin-regular.eot?#iefix')
-            format('embedded-opentype'),
-        /* IE6-IE8 */ url('../fonts/poppins/poppins-v5-latin-regular.woff2')
-            format('woff2'),
-        /* Super Modern Browsers */
-            url('../fonts/poppins/poppins-v5-latin-regular.woff') format('woff'),
-        /* Modern Browsers */
-            url('../fonts/poppins/poppins-v5-latin-regular.ttf')
-            format('truetype'),
-        /* Safari, Android, iOS */
-            url('../fonts/poppins/poppins-v5-latin-regular.svg#Poppins')
-            format('svg'); /* Legacy iOS */
+        url('../fonts/poppins/poppins-v5-latin-regular.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */ url('../fonts/poppins/poppins-v5-latin-regular.woff2') format('woff2'),
+        /* Super Modern Browsers */ url('../fonts/poppins/poppins-v5-latin-regular.woff') format('woff'),
+        /* Modern Browsers */ url('../fonts/poppins/poppins-v5-latin-regular.ttf') format('truetype'),
+        /* Safari, Android, iOS */ url('../fonts/poppins/poppins-v5-latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
 }
 
 body,
@@ -209,6 +202,11 @@ table {
             > a {
                 color: #fff;
             }
+        }
+    }
+    .breadcrumb {
+        > li {
+            color: #bbb;
         }
     }
 }
